chore: add click actions

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -23,6 +23,8 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:hint="@string/contact_name_hint"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbarIn"
@@ -35,6 +37,8 @@
         android:ems="10"
         android:inputType="textPostalAddress"
         android:hint="@string/contact_address_hint"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nameEt"
@@ -47,6 +51,8 @@
         android:ems="10"
         android:inputType="phone"
         android:hint="@string/contact_phone_hint"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/addressEt"
@@ -59,6 +65,8 @@
         android:ems="10"
         android:inputType="textEmailAddress"
         android:hint="@string/contact_email_hint"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/phoneEt"
@@ -69,6 +77,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/save_button_text"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailEt"/>
